# eigsep_dac

./: .gitignore  README.md  pyproject.toml  requirements.txt  rfsocdac.py
bitstream/: pseudo_random.fpg
notebooks/: Untitled3.ipynb  data_explore.ipynb  transmitter.npz
notebooks/.ipynb_checkpoints/: dac_sim_explore-checkpoint.ipynb
notebooks/exploration/: psuedo_random.ipynb  rfsoc_temp.ipynb
scripts/: gen_pseudorandom_npz.py  polarized.py  program_rfsoc.py  pseudo_random.py  search_pseudorandom_seed.py
scripts/archive/: adc_plot.py  adc_xclock_2plot.py
src/eigsep_dac/: __init__.py  program_board.py  waveform.py
